docs: Enhance README with detailed sections on project overview, features, architecture, and comprehensive build/run guides.